test/extern/bradc/classes/extern_subclasses.good
extern_subclasses.chpl:5: error: External types do not currently support inheritance
extern_subclasses.chpl:13: error: External types do not currently support inheritance
